[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsgmfss_union"
version = "1.1.0"
description = "GMFSS_union function for VapourSynth"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["GMFSS_union", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "cupy",
  "numpy",
  "tensorrt",
  "torch",
  "torch-tensorrt-fx-only",
  "VapourSynth>=55"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-gmfss_union"
"Bug Tracker" = "https://github.com/HolyWu/vs-gmfss_union/issues"
